--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "24.0.12",
     "@types/react": "19.1.8",
