--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "24.0.12",
     "@types/react": "19.1.8",
