--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/postcss": "^4.1.11",
@@ -31,6 +32,6 @@
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.3",
-    "zod": "^3.22.2"
+    "zod": "^4.0.2"
   }
 }
